# upsift

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  convert_report.py  json  pwnkit  pwnkit.c  pyproject.toml  report.csv  report.json  report.txt
.github/workflows/: ci.yml
src/upsift/: __main__.py  cli.py  engine.py
src/upsift/checks/: base.py
src/upsift/plugins/: check_cron_permissions.py  check_crontab_hijack.py  check_docker_group.py  check_env_variables.py  check_kernel_version.py  check_open_ports.py  check_path_permissions.py  check_ssh_weak_config.py  check_sudo_nopasswd.py  check_suid_binaries.py  check_systemd_service_writable.py  check_weak_passwords.py  check_world_writable_files.py
tests/: test_loader.py
